# muscle-wiki-datasets

./: README.md  crawler.js  crawler.py  dataset.json  download_videos.py  pyproject.toml
data/: dataset.json
