[project]
name = "muscle-wiki-datasets"
version = "0.1.0"
description = ""
authors = [
    {name = "Eduardo Vieira",email = "edusvieirap@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "tqdm (>=4.67.1,<5.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "selenium (>=4.31.0,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
